--- a/admin/user.html
+++ b/admin/user.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="./libs/jquery-1.12.4.min.js"></script>
-
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -68,6 +68,61 @@
             </form>
         </div>
     </div>
+    <script>
+    $(function(){
+        // 1.页面一加载，请求用户详情
+        // 1.1ajax发送请求
+        $.ajax({
+            url:BigNew.user_detail,
+            type:'get',
+            dataType:'json',
+            success: function(backData){
+                // 1.2渲染页面
+                console.log(backData);
+                $('.user_pic').attr('src',backData.data.userPic);
+                for(key in backData.data){
+                    $('.'+key).val(backData.data[key]);
+                }
+            }
+        });
+        // 2.图片预览
+        //1.给file表单元素注册onchange事件
+        $('#exampleInputFile').change(function () {
+            //1.2 获取用户选择的图片
+            var file = this.files[0];
+            //1.3 将文件转为src路径
+            var url = URL.createObjectURL(file);
+            //1.4 将url路径赋值给img标签的src
+            $('.user_pic').attr('src', url);
+        });
+
+        // 3.文件上传
+        $('.btn-edit').on('click',function(e){
+            //禁用表单默认提交事件
+            e.preventDefault();
+            //创建FormData对象：参数是表单dom对象
+            var fd = new FormData($('#form')[0])
+            $.ajax({
+                url:BigNew.user_edit,
+                type:'post',
+                dataType:'json',
+                data:fd,
+                contentType: false,
+                processData: false,
+                success: function(backData){
+                    console.log(backData);
+                    if(backData.code == 200){
+                        alert(backData.msg);
+                        window.parent.location.reload();
+                    }else{
+                        alert(backData.msg);
+                        window.parent.location.reload();
+                    }
+                }
+            });
+        });
+    })
+    </script>
 </body>
 
 </html>
