--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/main.css">
     <script src="./libs/jquery-1.12.4.min.js"></script>
+    <script src="./libs/http.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./libs/template-web.js"></script>
+    <!-- 引入分页插件 -->
+    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./libs/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -69,9 +73,166 @@
                 </tbody>
             </table>
             <div class="row text-center">
+                <!-- 分页插件html代码 -->
+                <ul id="pagination" class="pagination-sm"></ul>
             </div>
         </div>
     </div>
+
+    <!-- 文章分类模板 -->
+    <script id="art_list" type="text/html">
+        <option value="">所有分类</option>
+        {{ each data v }}
+        <option value="{{ v.id }}">{{ v.name }}</option>
+        {{ /each }}
+    </script>
+
+    <!-- 文章模板 -->
+    <script id="articles" type="text/html">
+        {{each data.data v}}
+        <tr>
+            <td>{{ v.title }}</td>
+            <td>{{ v.author }}</td>
+            <td>{{ v.category }}</td>
+            <td class="text-center">{{ v.date }}</td>
+            <td class="text-center">{{ v.state }}</td>
+            <td class="text-center">
+                <a href="article_edit.html?id={{ v.id }}" class="btn btn-default btn-xs">编辑</a>
+                <a href="javascript:void(0);" data-id="{{ v.id}}" class="btn btn-danger btn-xs delete">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script>
+        // 入口函数
+        $(function () {
+            // 0.页面一加载，显示文章类别列表.
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    //数据响应之后 模板引擎渲染页面
+                    $('#selCategory').html(template('art_list', backData));
+                }
+            });
+            // 为了代码简洁,将注册事件代码提前
+            // 2.筛选按钮点击事件
+            $('#btnSearch').click(function (e) {
+                // 阻止表单事件默认跳转事件
+                e.preventDefault();
+                // 调用获取文章清单函数
+                getArticleList(1, true);
+            })
+            // 1.页面一加载，显示文章列表.
+            $('#btnSearch').trigger('click');
+
+
+            /**
+             * @description:获取文章列表函数封装
+             * @param {type} 
+             * @return: 
+             */
+            function getArticleList(currenPage, flag) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selStatus').val(),
+                        page: currenPage,
+                        perpage: 10, //一页文章数量
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        //数据响应之后 模板引擎渲染页面
+                        $('.table>tbody').html(template('articles', backData));
+
+                        // 3.加载分页（内容以及事件）
+                        //只有在按下筛选的时候才需要加载分页（优化性能/减少代码执行次数）
+                        if (flag) {
+                            loadPagination(backData.data.totalPage, currenPage);
+                        }
+                    }
+                });
+            }
+
+
+            /*4.删除 ：  */
+            $('.table>tbody').on('click', '.text-center>.delete', function () {
+                // 发送删除文章请求
+                var id = $(this).attr('data-id')
+                $.ajax({
+                    url: BigNew.article_delete,
+                    type: 'post',
+                    dataType: 'json',
+                    data: {
+                        id: id
+                    },
+                    success: function (backData) {
+                        if (backData.code == 204) {
+                            alert('删除成功');
+                            window.location.reload();
+                        } else {
+                            alert(backData.msg);
+                        }
+                    }
+                });
+            })
+            /* 5.编辑 ： a标签href跳转（页面间传参） */
+            /* 6.发布 ： a标签href跳转 */
+            $('#release_btn').click(function(){
+                console.log('ggg');
+                
+                $('.level02>li:eq(1)',window.parent.document).trigger('click');
+            })
+
+            
+            /**
+             * @description:加载分页函数封装
+             * @param {totalPage:总共有多少页} 
+             * @param {startPage:开始页} 
+             * @return: 
+             */
+            function loadPagination(totalPage, startPage) {
+                //初始化分页插件
+                //(1)先销毁已经存在的插件
+                $('#pagination').twbsPagination('destroy');
+                //(2)初始化新的插件
+                $('#pagination').twbsPagination({
+                    totalPages: totalPage, //总页数
+                    startPage: startPage, //起始页数
+                    visiblePages: 6, //可见页数
+                    first: '首页',
+                    prev: '上一页',
+                    next: '下一页',
+                    last: '尾页',
+                    onPageClick: function (event, page) {
+                        /* 
+                        1.发现问题 ： getArticleList()  与 loadPagination() 形成递归调用
+                        2.分析问题 ：
+                            默认点击筛选 ： 调用getArticleList(1) 
+                            getArticleList(1)方法中 ajax请求数据 响应之后加载分页插件loadPagination()
+                            loadPagination()方法第一次加载的时候默认触发第一页点击事件，就会调用getArticleList(1)
+                        3.解决问题： 给递归函数添加结束条件
+                            方案一： 判断 如果 点击的页数 和 当前起始页数不一致才调用getArticleList()
+                            方案二： 给getArticleList添加布尔类型参数，只有点击筛选才需要调用loadPagination()
+                        */
+
+                        //只有点击的页数和当前页数不一致才请求数据（优化代码）
+                        if (startPage != page) {
+                            getArticleList(page);
+                        }
+                        console.log(page);
+
+                    }
+                });
+            };
+
+        })
+    </script>
 </body>
 
 </html>
