--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -14,6 +14,15 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
+    <!-- jedate -->
+    <link type="text/css" rel="stylesheet" href="./libs/jedate/test/jeDate-test.css">
+    <link type="text/css" rel="stylesheet" href="./libs/jedate/skin/jedate.css">
+    <script type="text/javascript" src="./libs/jedate/src/jedate.js"></script>
+    <!-- tinymce -->
+    <script src="./libs/tinymce/tinymce.min.js"></script>
+    <!-- jedate + tinymce 初始化-->
+    <script src="./libs/config.js"></script>
+
 </head>
 
 <body>
@@ -51,22 +60,95 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" name="date" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns"
+                                onclick="jeDate('#testico',{theme:{bgcolor:'#00A680',pnColor:'#00DDAA'},trigger:false,format: 'YYYY-MM-DD'})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <!-- tinymce -->
+                        <textarea id="mytextarea" name="mytextarea" style="height: 350px">文章内容</textarea>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-success btn-release">发布</button>
+                        <button type="submit" class="btn btn-success btn-edit">发布</button>
                         <button type="submit" class="btn btn-default btn-draft">存为草稿</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+    <script id="cat-list" type="text/html">
+        {{ each data v}}
+        <option value="{{ v.id }}">{{ v.name }}</option>
+        {{ /each }}
+    </script>
+    <script src="./libs/http.js"></script>
+    <script>
+        // 入口函数
+        $(function () {
+            // 0.页面一加载,渲染所有的文章类别
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    //数据响应之后 模板引擎渲染页面
+                    $('.category').html(template('cat-list', backData));
+                }
+            });
+            // 2.图片预览
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('.article_cover').attr('src', url);
+            });
+            // 3.文章提交
+            $('.btn-edit').on('click', function (e) {
+                //禁用表单默认提交事件
+                e.preventDefault();
+                artRelease('已发布');
+            });
+            // 3.草稿提交
+            $('.btn-draft').on('click', function (e) {
+                //禁用表单默认提交事件
+                e.preventDefault();
+                artRelease('草稿');
+            });
+
+            // 提交按钮函数封装
+            function artRelease(state) {
+                //创建FormData对象：参数是表单dom对象
+                var fd = new FormData($('#form')[0]);
+                fd.append('content', tinymce.activeEditor.getContent());
+                fd.append('state', state);
+                $.ajax({
+                    url: BigNew.article_publish,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        alert(backData.msg);
+                        window.history.back();
+                    }
+                });
+            }
+        })
+    </script>
 </body>
 
 </html>
