大事件第四天下午--完成首页图表制作

--- a/admin/main_count.html
+++ b/admin/main_count.html
@@ -202,69 +202,60 @@
         // 基于准备好的dom，初始化echarts实例
         var myChart2 = echarts.init(document.getElementById('column_show'));
 
-        option2 = {
-            title: {
-                left: 'center',
-                text: '分类访问量',
-            },
-            tooltip: {
-                trigger: 'axis',
-                axisPointer: {            // 坐标轴指示器，坐标轴触发有效
-                    type: 'line'        // 默认为直线，可选为：'line' | 'shadow'
+        var option2 = {
+                color: ['#5885e8', '#13cfd5', '#00ce68', '#ff9565', '#20ff19'],
+                title: {
+                    text: '分类访问量',
+                    x: 'center'
                 },
-                
-            },
-            legend: {
-                data: ['爱生活', '趣美味', '爱旅行', '爱电影', '爱保健'],
-                top:30
-            },
-            grid: {
-                left: '3%',
-                right: '4%',
-                bottom: '3%',
-                containLabel: true
-            },
-            xAxis: [
-                {
+                tooltip: {
+                    trigger: 'axis',
+                    axisPointer: {
+                        type: 'shadow'
+                    }
+                },
+                legend: {
+                    top: '30px',
+                    data: ['爱生活', '趣美味', '爱旅行', '爱电影', '爱保健']
+                },
+                calculable: true,
+                xAxis: [{
                     type: 'category',
-                    data: ['一月', '二月', '三月', '四月']
-                }
-            ],
-            yAxis: [
-                {
+                    axisTick: {
+                        show: false
+                    },
+                    data: ['一月', '二月', '三月', '四月', '五月']
+                }],
+                yAxis: [{
                     type: 'value'
-                }
-            ],
-            color: ['#5885e8', '#13cfd5', '#00ce68', '#ff9565', '#20ff19'],
-            series: [
-                {
-                    name: '爱生活',
-                    type: 'bar',
-                    data: [320, 332, 301, 334]
-                },
-                {
-                    name: '趣美味',
-                    type: 'bar',
-                    data: [220, 132, 101, 134]
-                },
-                {
-                    name: '爱旅行',
-                    type: 'bar',
-                    data: [220, 182, 191, 234]
-                },
-                {
-                    name: '爱电影',
-                    type: 'bar',
-                    data: [150, 232, 201, 154]
-                },
-                {
-                    name: '爱保健',
-                    type: 'bar',
-                    data: [262, 118, 364, 426],
-                },
-
-            ]
-        };
+                }],
+                series: [{
+                        name: '爱生活',
+                        type: 'bar',
+                        data: [320, 332, 301, 334, 390]
+                    },
+                    {
+                        name: '趣美味',
+                        type: 'bar',
+                        data: [220, 182, 191, 234, 290]
+                    },
+                    {
+                        name: '爱旅行',
+                        type: 'bar',
+                        data: [150, 232, 201, 154, 190]
+                    },
+                    {
+                        name: '爱电影',
+                        type: 'bar',
+                        data: [98, 77, 101, 99, 40]
+                    },
+                    {
+                        name: '爱保健',
+                        type: 'bar',
+                        data: [98, 77, 101, 99, 40]
+                    }
+                ]
+            };
 
 
         // 使用刚指定的配置项和数据显示图表。
